--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "caver-js-ext-kas": "^1.12.0",
+    "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "moment": "^2.29.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19"
