--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "caver-js": "^1.9.0",
     "caver-js-ext-kas": "^1.12.0",
     "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.1",
