--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "caver-js": "^1.9.0",
     "caver-js-ext-kas": "^1.12.0",
     "cross-fetch": "^3.1.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "moment": "^2.29.4",
     "mysql2": "^2.3.3",
