--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "caver-js": "^1.9.0",
     "caver-js-ext-kas": "^1.12.0",
     "cross-fetch": "^3.1.5",
-    "crypto-js": "^4.1.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
